[package]
name = "mongo-copy"
version = "0.2.1"
edition = "2021"
authors = ["Shaun Hamilton <shauhami020@gmail.com>"]
description = "A powerful command-line tool for copying MongoDB databases and collections between instances"
readme = "README.md"
homepage = "https://github.com/ShaunSHamilton/mongo-copy"
repository = "https://github.com/ShaunSHamilton/mongo-copy"
license = "MIT"
keywords = ["mongodb", "database", "cli", "copy", "migration"]
categories = ["command-line-utilities", "database"]
rust-version = "1.70"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
mongodb = "3.3"
tokio = { version = "1.48", features = ["full"] }
inquire = "0.9"
anyhow = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
keyring = { version = "3", features = [
  "windows-native",
  "apple-native",
  "linux-native",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
